results/SpecGenBench/2-shot/log-MulNested-2023_11_28_11_39_01.txt
public class MulNested {
    //@ ensures \result == x * y;
    public static int mulNested(int x, int y) {
        int res = 0, m = x, n = y, sign = 1;
        //@ maintaining 0 <= res && res <= x * y;
        //@ maintaining res == i * y;
        //@ maintaining 0 <= i && i <= m;
        //@ decreases m - i;
        if(x < 0){
            m = -x;
            sign = -sign;
        }
        //@ maintaining 0 <= res && res <= x * y;
        //@ maintaining res == i * y;
        //@ maintaining 0 <= i && i <= m;
        //@ decreases m - i;
        if(y < 0){
            n = -y;
            sign = -sign;
        }
        //@ maintaining 0 <= res && res <= x * y;
        //@ maintaining res == i * y;
        //@ maintaining 0 <= i && i <= m;
        //@ decreases m - i;
        for(int i = 0; i < m; i++) {
            //@ maintaining 0 <= res && res <= x * y;
            //@ maintaining res == i * y + j;
            //@ maintaining 0 <= j && j <= n;
            //@ decreases n - j;
            for(int j = 0; j < n; j++) {
                res = res + 1;
            }
        }
        return sign * res;
    }
}
/home/max/Documents/JMLGPT/tmp/MulNested.java:5: error: Loop specifications must immediately precede a loop statement
        //@ maintaining 0 <= res && res <= x * y;
            ^
/home/max/Documents/JMLGPT/tmp/MulNested.java:13: error: Loop specifications must immediately precede a loop statement
        //@ maintaining 0 <= res && res <= x * y;
            ^
2 errors

